--- a/yourSite/service1.html
+++ b/yourSite/service1.html
@@ -124,8 +124,11 @@
   
   <div class="w3-container w3-padding-32 w3-theme-l1 w3-center">
     <div class="fotorama" data-nav="thumbs" data-width="100%" data-height="100%">
-      <img src="images/service3-1.jpeg" data-caption="One example of Construction Drawing">
-      <img src="https://s.fotorama.io/2.jpg">
+      <img src="images/schematic1.png" data-caption="Schematic Design Site Plan, Rockwood 10">
+      <img src="images/schematic2.jpeg" data-caption="Schematic Design Floor Plans Moss Architects">
+      <img src="images/schematic3.png" data-caption="Schematic Design, Danish Brotherhood Hall">
+      <img src="images/schematic4.png" data-caption="Schematic Design, Palace of the Soviets ">
+      <img src="images/schematic5.png" data-caption="Schematic Design, Capilla de la Santa Cruz, Taller de Arquitectura X">
     </div>
     </div>
 
