--- a/yourSite/service2.html
+++ b/yourSite/service2.html
@@ -134,8 +134,13 @@
 
     <div class="w3-container w3-padding-32 w3-theme-l1 w3-center">
       <div class="fotorama" data-nav="thumbs" data-width="100%" data-height="100%">
-        <img src="images/service3-1.jpeg" data-caption="One example of Construction Drawing">
-        <img src="https://s.fotorama.io/2.jpg">
+        <img src="images/development1a.png" data-caption="Elbphilharmonie by Herzog & de Meuron, Level 10">
+        <img src="images/development1b.png" data-caption="Elbphilharmonie by Herzog & de Meuron, Level 16">
+        <img src="images/development2a.png" data-caption="Elbphilharmonie by Herzog & de Meuron, Section 1">
+        <img src="images/development2b.png" data-caption="Elbphilharmonie by Herzog & de Meuron, Section 2">
+        <img src="images/development3.png" data-caption="Parallax by William Kaven">
+        <img src="images/development4.png" data-caption="Architectural Symbols and Conventions by SFP Online">
+        <img src="images/development5.png" data-caption="Building Material Products by Arch Daily">
       </div>
       </div>
 
