--- a/yourSite/service1.html
+++ b/yourSite/service1.html
@@ -93,7 +93,7 @@
     <p>But, if you do decide to explore multiple design options in schematic design, it’s necessary to choose one before moving forward into the design development phase. So everyone is on the same page when your team develops the design further.</p>
   </div>
 
-  <div class="faq w3-row-padding w3-padding-64">
+  <div class="recap w3-row-padding w3-padding-64">
     <h2 class="w3-center">RECAP</h2>
     <div class="accordion service-tabs">
         <p class="question">WHAT IS THE DIFFERENCE BETWEEN CONCEPT DESIGN AND SCHEMATIC DESIGN?</p>
