--- a/yourSite/service4.html
+++ b/yourSite/service4.html
@@ -68,43 +68,29 @@
 <!-- Image Header -->
 <div class="hero-service w3-display-container">
   <div class="hero-content w3-display-bottomleft">  
-    <h1>WHAT IS CONSTRUCTION DOCUMENTS PHASE?</h1>
-    <h2>Construction documents serve as a contract between the Architect, the Contractor, and the Owner. In construction documents, all the building practices coordinate to turn the big design ideas presented to the Owner into something buildable and safe to inhabit.</h1>
+    <h1>WHAT IS BIDDING PHASE?</h1>
+    <h2>Out of all the design phases, the bidding phase is rather simple – the goal is to find a construction company to build the project. You will again become a service provider and guide your client in finding the best construction company based on their qualifications and price.</h1>
   </div>
 </div>
 
   <!-- Content Section -->
   <div class="w3-container w3-padding-32 about-special">
-    <p>Construction documents may not seem like the most glamorous part of architectural design. All the ‘fun’ stuff - the model making, sketching, conceptual conversations and wild iterations - happens earlier in schematic design. Even the term ‘construction documents’ sounds boring.</p>
-    <p>But, construction documents (CDs) are an important part of the architectural process, and provide their own unique opportunities for the designer. Construction documents are directions from the Architect to the Contractor. These documents describe precisely how the Contractor will make the Architect’s design become a built object - through drawings and specifications. <p>
+    <p>The construction company will be entering in a contract with the client – not with you.</p>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS CONSTRUCTION DOCUMENTATION?</h3>
     <p>Here, all the details come together, and construction documents serve two basic purposes: to obtain a building permit, and to get the design built. These may be delivered in two types of construction documents - a permit set and a construction set. </p>
     <p>While both construction document sets need to be very detailed, it is common practice for the permit set to be delivered prior to the construction set. In so doing, any issues that arise during permitting can be addressed and corrected in the construction set. In order for a completed building to receive its final certificate of occupancy from the local authority having jurisdiction, the building must closely match the construction documents submitted in the permit set. <p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS THE PURPOSE OF CONSTRUCTION DOCUMENTS?</h3>
-    <p>The purpose of construction documents is to get the design built. These are contract binding documents which describe precisely how the design shall be built: methods, materials, building systems, components. The construction documents describe precisely, in both large and small scales, every facet of the building design. Good construction documents provide the Contractor the most comprehensive understanding of the Architect’s intent.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">CONSTRUCTION DRAWING TYPICALLY INCLUDE:</h3>
-    <ul>
-      <li>General Sheets: </li>
-      <p>These are the beginning of the construction documents set. The general drawings include the cover page, building and zoning code analysis, life safety plans, and accessibility and sustainability standards if required.</p>
-      <li>Civil Engineering Sheets:</li>
-      <p>These drawings include the Civil Engineer’s notes, the grading and utilities plans, and other details.</p>
-      <li>Landscape Architecture Sheets: </li>
-      <p>These drawings are submitted by the licensed Landscape Architect. The landscape architecture drawings include plans, sections, and details, in order to effectively communicate to the Contractor and Subcontractors how to construct the various landscape elements. There is usually coordination required between the Civil Engineer and Landscape Architect. </p>
-      <li>Structural Sheets:</li>
-      <p>The licensed Structural Engineer’s drawings provide structural plans, calculations, and details - from an entire level’s beam system, to the detailed connection between structural elements. Detailed drawings and calculations for each type of structural system in the project are required. </p>
-      <li>Architectural Sheets: </li>
-      <p>The architectural drawings graphically communicate (in plan, section, elevation, and details) the architectural components of the building design. Architects are most familiar with these drawing types, but there are similarities in drawing types among all disciplines. </p>
-      <li>Plumbing Sheets: </li>
-      <p>The plumbing drawings will show the locations and sizes of all inbound and outbound water supply. A plan for each level shows every pipe, faucet, and drain. Diagrams, details, and schedules also communicate how these components work together to provide a functional plumbing system in a building.</p>
-      <li>Mechanical Sheets: </li>
-      <p>The mechanical engineer’s drawings will show the locations and sizes of all mechanical equipment in an architectural design. This includes the size and layout of all exposed or concealed ductwork, as well as the location of each vent, heating unit, cooling unit, and thermostat. </p>
-      <li>Electrical Sheets: </li>
-      <p>These drawings will show the locations of all power outlets, sources, light fixtures, and switches. As we see growing trends towards energy efficiency after occupancy in buildings, the electrical drawings may also account for energy and sustainability compliance. Typically, lighting plans and power & voltage plans are provided for each level of the building, as well as a sheet devoted to power calculations.
-      </p>
-    </ul>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">NEGOTIATED VS. COMPETITIVE BIDS</h3>
+    <p>There are two different types of bids: a negotiated bid and a competitive bid.</p>
+    <p>The negotiated bidding process is more relaxed, as you are only dealing with one contractor. With this type of bid, the client or the architect selects a preferred contractor and works with that contractor to develop a cost and proposal for the construction.</p>
+    <p>A competitive bid is the one we usually think of – where you have several contractors all competing against one another for the project.</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">COMPETITIVE BID PROCESS</h3>
+    <p>First, you will have to create a list of contractors you want to invite to the table. Use Google to find contractors in the project area – travel costs can add up quickly. Look at their website and see if the projects they have worked on in the past are like your project, both in size and quality.</p>
+    <p>From there you can find and call up architects who have worked with the contractors. Ask them questions about their experience: Were they happy with the quality of their work? Was the contractor’s bidding price accurate?</p>
+    <p>Next, call up the contractors. Explain the project and make sure they have the time and resources for it. Send the project documents, including the drawing set, to the contractors who are prepared to take on your project – usually this is done by uploading them to a file sharing site. Typically, contractors take about three weeks to put together a bid. Once you receive all the bids it’s time to pick a contractor.</p>
+    <p>Usually, cost is the most important factor. This is where the accuracy and completeness of your construction documents comes into play. If the bids are all similar in cost, give yourself a pat on the back – you did your job well! When this happens, the cost becomes less important and you can focus more on other aspects of the bid – like the quality or experience of the contractor.</p>
   </div>
 
-  <div class="faq w3-row-padding w3-padding-64">
+  <div class="recap w3-row-padding w3-padding-64">
     <h2 class="w3-center">RECAP</h2>
     <div class="accordion service-tabs">
         <p class="question">WHAT ORDER DO CONSTRUCTION DRAWINGS GO IN?</p>
