--- a/yourSite/service2.html
+++ b/yourSite/service2.html
@@ -102,7 +102,7 @@
     </ol>
   </div>
 
-  <div class="faq w3-row-padding w3-padding-64">
+  <div class="recap w3-row-padding w3-padding-64">
     <h2 class="w3-center">RECAP</h2>
     <div class="accordion service-tabs">
         <p class="question">5 IMPORTANT THINGS TO KEEP IN MIND IN THE DD PHASE:</p>
