--- a/yourSite/service5.html
+++ b/yourSite/service5.html
@@ -104,7 +104,7 @@
     </ul>
   </div>
 
-  <div class="faq w3-row-padding w3-padding-64">
+  <div class="recap w3-row-padding w3-padding-64">
     <h2 class="w3-center">RECAP</h2>
     <div class="accordion service-tabs">
         <p class="question">WHAT ORDER DO CONSTRUCTION DRAWINGS GO IN?</p>
