--- a/yourSite/service4.html
+++ b/yourSite/service4.html
@@ -13,8 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/additional-methods.min.js"></script> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/additional-methods.min.js"></script>
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
     <script src="script.js"></script>
@@ -76,13 +75,16 @@
   <!-- Content Section -->
   <div class="w3-container w3-padding-32 about-special">
     <p>The construction company will be entering in a contract with the client – not with you.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS CONSTRUCTION DOCUMENTATION?</h3>
-    <p>Here, all the details come together, and construction documents serve two basic purposes: to obtain a building permit, and to get the design built. These may be delivered in two types of construction documents - a permit set and a construction set. </p>
-    <p>While both construction document sets need to be very detailed, it is common practice for the permit set to be delivered prior to the construction set. In so doing, any issues that arise during permitting can be addressed and corrected in the construction set. In order for a completed building to receive its final certificate of occupancy from the local authority having jurisdiction, the building must closely match the construction documents submitted in the permit set. <p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS BIDDING OR NEGOTIATING?</h3>
+    <p>Bidding is where the owner prepares to select the contractor for the job and sign contracts to proceed with construction. This phase will typically take up 5% of the architects time and fees. Multiple contractors submit bids on the job or the client can directly hire a contractor without getting competitive bids. The architect's role here will be to assist the client, answer contractors' questions provide any additional documentation if requested by or needed by the contractor. <p>
+    <p>Having an architect on your side during the bidding phase of construction is of great advantage to you. At minimum, we aid you in developing a list of qualified contractors for your bid list as well as submitting bid packages to bidders. But we can also review submitted bids, provide analysis, and help you compare the cost figures that you receive from your bidders. This phase will ensure the contractors you are considering for your construction project are reading the blueprints correctly and are providing an accurate bid (apples to apples) for your project. Having an architect to consult with during this phase of the project can help you navigate what can often be a confusing process and can provide you with extra reassurance that your hiring the best contractor for the project.</p>
+    <p>On a similar note, if you have an exact budget in mind at the beginning of the process, we may recommend you hire a contractor to consult and review during the Schematic Design, Design Development, and Construction Drawings from the beginning in order to ensure the project is within the specified budget.  Only a General Contractor can guarantee a price of construction; architects and cost estimators who provided budgets cannot guarantee those prices.</p>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">NEGOTIATED VS. COMPETITIVE BIDS</h3>
     <p>There are two different types of bids: a negotiated bid and a competitive bid.</p>
     <p>The negotiated bidding process is more relaxed, as you are only dealing with one contractor. With this type of bid, the client or the architect selects a preferred contractor and works with that contractor to develop a cost and proposal for the construction.</p>
     <p>A competitive bid is the one we usually think of – where you have several contractors all competing against one another for the project.</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">NEGOTIATED BID PROCESS</h3>
+    <p>The negotiated bid is the most common method of bidding for commercial construction projects. It is a more straightforward, less formal process that is applicable for most projects. Also, most project owners prefer to negotiate price and terms directly with the general contractor of their choice. Since project owners work directly with the general contractor, there is less risk of leaving out important details that could affect the bid estimate. Also, consulting directly with the client gives the contractor the ability to make recommendations regarding materials, delivery method, value engineering principles and other variables that can significantly reduce construction costs with higher quality work. Another advantage of using the negotiated bid process is that it allows the client and contractor to solidify their relationship. The mutual goal for both parties is the successful delivery of the construction project that is within established budgetary guidelines.</p>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">COMPETITIVE BID PROCESS</h3>
     <p>First, you will have to create a list of contractors you want to invite to the table. Use Google to find contractors in the project area – travel costs can add up quickly. Look at their website and see if the projects they have worked on in the past are like your project, both in size and quality.</p>
     <p>From there you can find and call up architects who have worked with the contractors. Ask them questions about their experience: Were they happy with the quality of their work? Was the contractor’s bidding price accurate?</p>
@@ -93,10 +95,10 @@
   <div class="recap w3-row-padding w3-padding-64">
     <h2 class="w3-center">RECAP</h2>
     <div class="accordion service-tabs">
-        <p class="question">WHAT ORDER DO CONSTRUCTION DRAWINGS GO IN?</p>
-        <p class="answer">Construction document drawings follow a standard order. Typically, construction drawings follow the United States National CAD Standard. In this standard, the lower right hand corner of each drawing sheet contains a series of letters and numbers (the sheet number). The sheet number lets the reader know where they are in the drawing set, and allows the reader to know where to look in the drawing set for specific information. </p>
-        <p class="question">WHAT IS INCLUDED IN CONSTRUCTION DOCUMENTS?</p>
-        <p class="answer">There are two things included in Construction Documents: Drawings and Specifications. All Construction Documents follow this standard, which helps the reader to know where to look among the hundreds of pages of architectural drawings and specifications. Each affiliated building practice provides both types of construction documents: Architecture, Structural, Mechanical, Electrical, Plumbing, Landscape Architecture, and Civil.</p>
+        <p class="question">WHAT DOES THE BIDDING PROCESS INCLUDE?</p>
+        <p class="answer">The construction bidding process is broken down into five key steps: bid solicitation, bid submission, bid selection, contract formation, and project delivery. </p>
+        <p class="question">WHAT IS INCLUDED IN BIDDING DOCUMENTS?</p>
+        <p class="answer">Bid documents include the plans, specifications and estimates (PS&E) developed to describe all of the elements of a construction project and become the contract between the local government and the selected contractor.</p>
         <p class="question">ALL THE DESIGN PHASES YOU SHOULD KNOW.</p>
         <p class="answer">The 5 phases of an architectural design project are:<br>
           - Schematic Design Phase<br>
@@ -109,8 +111,8 @@
 
     <div class="w3-container w3-padding-32 w3-theme-l1 w3-center">
     <div class="fotorama" data-nav="thumbs" data-width="100%" data-height="100%">
-      <img src="images/service3-1.jpeg" data-caption="One example of Construction Drawing">
-      <img src="https://s.fotorama.io/2.jpg">
+      <img src="images/bidding1.jpg" data-caption="Estimating is more than preparing a list of indirect and direct costs. To generate reliable estimates, you must conduct an in-depth analysis of the project’s scope.">
+      <img src="images/bidding2.jpg" data-caption="A snapshot outlining functional construction bidding requirements.">
     </div>
     </div>
 
