--- a/yourSite/service5.html
+++ b/yourSite/service5.html
@@ -14,7 +14,6 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/additional-methods.min.js"></script> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
     <script src="script.js"></script>
@@ -68,49 +67,66 @@
 <!-- Image Header -->
 <div class="hero-service w3-display-container">
   <div class="hero-content w3-display-bottomleft">  
-    <h1>WHAT IS CONSTRUCTION DOCUMENTS PHASE?</h1>
-    <h2>Construction documents serve as a contract between the Architect, the Contractor, and the Owner. In construction documents, all the building practices coordinate to turn the big design ideas presented to the Owner into something buildable and safe to inhabit.</h1>
+    <h1>WHAT IS COCONTRACR ADMINISTRATION PHASE?</h1>
+    <h2>During the construction phase – typically from the Notice to Proceed to when the client occupies the building – the architect provides construction oversight. This is where you are ensuring the building is constructed to the design specifications.</h1>
   </div>
 </div>
 
   <!-- Content Section -->
   <div class="w3-container w3-padding-32 about-special">
-    <p>Construction documents may not seem like the most glamorous part of architectural design. All the ‘fun’ stuff - the model making, sketching, conceptual conversations and wild iterations - happens earlier in schematic design. Even the term ‘construction documents’ sounds boring.</p>
-    <p>But, construction documents (CDs) are an important part of the architectural process, and provide their own unique opportunities for the designer. Construction documents are directions from the Architect to the Contractor. These documents describe precisely how the Contractor will make the Architect’s design become a built object - through drawings and specifications. <p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS CONSTRUCTION DOCUMENTATION?</h3>
-    <p>Here, all the details come together, and construction documents serve two basic purposes: to obtain a building permit, and to get the design built. These may be delivered in two types of construction documents - a permit set and a construction set. </p>
-    <p>While both construction document sets need to be very detailed, it is common practice for the permit set to be delivered prior to the construction set. In so doing, any issues that arise during permitting can be addressed and corrected in the construction set. In order for a completed building to receive its final certificate of occupancy from the local authority having jurisdiction, the building must closely match the construction documents submitted in the permit set. <p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS THE PURPOSE OF CONSTRUCTION DOCUMENTS?</h3>
-    <p>The purpose of construction documents is to get the design built. These are contract binding documents which describe precisely how the design shall be built: methods, materials, building systems, components. The construction documents describe precisely, in both large and small scales, every facet of the building design. Good construction documents provide the Contractor the most comprehensive understanding of the Architect’s intent.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">CONSTRUCTION DRAWING TYPICALLY INCLUDE:</h3>
+    <p>An architectural contract is something you hope to never look at again once it is created. Typically, it’s only brought out if one party believes the other isn’t upholding their part of the contract. It’s best if this document sits in the project folder forever.</p>
+    <p>It’s also the most important document you will create for a project.<p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">PRE- AND DURING CONSTRUCTION TASKS</h3>
+    <p>You will be arranging and leading the pre-construction meeting and the progress meetings during construction. Any testing done, like soil or concrete testing, will be reviewed by you.</p>
+    <p>You will review and approve submittals from contractors. This can include shop drawings, product data sheets, and samples. You will be reviewing and approving monthly pay requests from the contractor. These detail the work done during the month and requests payment for that work.<p>
+    <p>Any Requests for Information from the contractors will be sent to you and it is your responsibility to respond to them as quickly as possible. Any delay on your part could hold up the project. These are typically sent if there is an issue with the design or specification, or if site conditions bring up an issue.</p>
+    <p>You will also need to do regular site visits to see how construction is progressing and if it is following specifications. Sometimes, you will need to issue Change Orders. This often leads to an increase in the price, so owners do not like Change Orders.  People make mistakes or change their minds. It happens. Still, try to avoid Change Orders like the plague.</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">POST CONSTRUCTION TASKS</h3>
+    <p>After the construction has been completed, you will perform a final walk-through and develop a punch list. This list is any remaining items to complete the construction as specified. This is not the time to try to add on things that were not included in the scope of work.</p>
+    <p>Once those punch list items have been completed, it’s time for the Certificate of Substantial Completion. This essentially declares the project completed.</p>
+    <p>After the project is completed, there are still several documents that need to be exchanged between you and the owner for the project close out, including:</p>
     <ul>
-      <li>General Sheets: </li>
-      <p>These are the beginning of the construction documents set. The general drawings include the cover page, building and zoning code analysis, life safety plans, and accessibility and sustainability standards if required.</p>
-      <li>Civil Engineering Sheets:</li>
-      <p>These drawings include the Civil Engineer’s notes, the grading and utilities plans, and other details.</p>
-      <li>Landscape Architecture Sheets: </li>
-      <p>These drawings are submitted by the licensed Landscape Architect. The landscape architecture drawings include plans, sections, and details, in order to effectively communicate to the Contractor and Subcontractors how to construct the various landscape elements. There is usually coordination required between the Civil Engineer and Landscape Architect. </p>
-      <li>Structural Sheets:</li>
-      <p>The licensed Structural Engineer’s drawings provide structural plans, calculations, and details - from an entire level’s beam system, to the detailed connection between structural elements. Detailed drawings and calculations for each type of structural system in the project are required. </p>
-      <li>Architectural Sheets: </li>
-      <p>The architectural drawings graphically communicate (in plan, section, elevation, and details) the architectural components of the building design. Architects are most familiar with these drawing types, but there are similarities in drawing types among all disciplines. </p>
-      <li>Plumbing Sheets: </li>
-      <p>The plumbing drawings will show the locations and sizes of all inbound and outbound water supply. A plan for each level shows every pipe, faucet, and drain. Diagrams, details, and schedules also communicate how these components work together to provide a functional plumbing system in a building.</p>
-      <li>Mechanical Sheets: </li>
-      <p>The mechanical engineer’s drawings will show the locations and sizes of all mechanical equipment in an architectural design. This includes the size and layout of all exposed or concealed ductwork, as well as the location of each vent, heating unit, cooling unit, and thermostat. </p>
-      <li>Electrical Sheets: </li>
-      <p>These drawings will show the locations of all power outlets, sources, light fixtures, and switches. As we see growing trends towards energy efficiency after occupancy in buildings, the electrical drawings may also account for energy and sustainability compliance. Typically, lighting plans and power & voltage plans are provided for each level of the building, as well as a sheet devoted to power calculations.
-      </p>
+      <li>Project Record Documents</li>
+      <li>Operation and Maintenance Manuals</li>
+      <li>Warranties and Bonds</li>
+      <li>Consent of Surety (if bonded)</li>
+      <li>Waiver of Liens</li>
+    </ul>
+    <p>About ten months after project closeout, you might be required to do a warranty inspection. Many warranties expire after one year, so this is the time to make sure everything is working as it should.</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">STEPS TO CREATE THE CONTRACT</h3>
+    <ul>
+      <li>LETTER OF PROPOSAL</li>
+      <p>Once you understand the scope of the project you will send your client a Letter of Proposal. This Letter of Proposal doesn’t contain any designs or contracts – those come after the client has decided to move ahead. A Letter of Proposal is mainly to communicate to the client your basic understanding of a project and the way you would go about completing the scope of work.</p>
+      <li>HANDSHAKE</li>
+      <p>A simple handshake is not legally binding and provides no legal protection at all. This is considered very old school. While many will shake hands during the process, most will follow up the handshake with one of the other, more legally binding actions.</p>
+      <li>LETTER OF INTENT</li>
+      <p>A Letter of Intent is often considered a written handshake – meaning it’s simple and offers very minimal legal protection. In it, the architect will restate the terms and scope described in the Letter of Proposal, while expanding the terms and conditions. Only the architect signs this document. Usually, a Letter of Intent is followed by a more formal contract.</p>
+      <li>LETTER OF AGREEMENT</li>
+      <p>This document provides slightly more legal protection, as it’s signed by both the owner and the architect, but it still isn’t recommended as the only written agreement. It is essentially a more developed Letter of Intent, with the scope described, terms and conditions set forth, and a basic compensation plan developed.</p>
+      <li>ARCHITECT-PREPARED CONTRACT</li>
+      <p>This is the route most recommended by professionals. Architect-Prepared Contracts are contracts that are prepared by the architect vs. another agency. Since you are creating the document yourself, you can add terms to it that will enable you to do your best work. Any issues you have dealt with on previous projects can be added to your contract to eliminate the fear of going through that problem again.</p>
+      <p>One last benefit: because you control the language and look of this document you can best tailor it to be appealing to your clients. It will appear non-threatening and your clients will be quicker to sign it. You can even revise each contract to fit each client personally.</p>
+      <p>Your contract should be a legally binding, fully developed document. Review by an attorney will help ensure that any holes are fully patched up – protecting both parties.</p>
     </ul>
   </div>
 
   <div class="recap w3-row-padding w3-padding-64">
     <h2 class="w3-center">RECAP</h2>
     <div class="accordion service-tabs">
-        <p class="question">WHAT ORDER DO CONSTRUCTION DRAWINGS GO IN?</p>
-        <p class="answer">Construction document drawings follow a standard order. Typically, construction drawings follow the United States National CAD Standard. In this standard, the lower right hand corner of each drawing sheet contains a series of letters and numbers (the sheet number). The sheet number lets the reader know where they are in the drawing set, and allows the reader to know where to look in the drawing set for specific information. </p>
-        <p class="question">WHAT IS INCLUDED IN CONSTRUCTION DOCUMENTS?</p>
-        <p class="answer">There are two things included in Construction Documents: Drawings and Specifications. All Construction Documents follow this standard, which helps the reader to know where to look among the hundreds of pages of architectural drawings and specifications. Each affiliated building practice provides both types of construction documents: Architecture, Structural, Mechanical, Electrical, Plumbing, Landscape Architecture, and Civil.</p>
+        <p class="question">ROLE OF THE CONTRACT</p>
+        <p class="answer">A contract is, at its most basic, communication between the owner and the architect. It lays everything on the table and makes everyone aware of the expectations and the roles everyone will play. A contract can be used later to solve disputes, but, if a contract is done well, it will prevent issues from coming up in the first place.</p>
+        <p class="question">WHAT IS IN THE ARCHITECT'S CONTRACT?</p>
+        <p class="answer">At a minimum, every contract should contain the name, address, and signatures of both parties, the scope of work, the project cost and payment terms, the schedule of work, and the authority.<br>
+          - Full Name, Address, and Signatures of Both Parties<br>
+          - Without this component, your contract is just a useless piece of paper. It can be easy to forget the most basic aspect, even if it is the most important, so double-check this is included. <br>
+          - Scope of Work<br>
+          - Since a contract is essentially communication between the two parties about the work that will be done, a full scope of work should be included. That way both parties can make sure they are agreeing to the same description of materials, quality of work, schedule, and other specifications.<br>
+          - Project Cost and Payment Terms<br>
+          - With a clearly defined cost of services, schedule, and terms and conditions, there can be no confusion from either party about how much should be paid and when payment will happen.<br>
+          - Schedule of Work<br>
+          - Include details like when the project will start, when milestones will be reached, and the project completion date.<br>
+          - Authority<br>
+          - During construction, with many decisions to be made, it needs to be clear who has the authority to make those decisions. Detailing it now in the contract will eliminate frustration or delays during the project.</p>
         <p class="question">ALL THE DESIGN PHASES YOU SHOULD KNOW.</p>
         <p class="answer">The 5 phases of an architectural design project are:<br>
           - Schematic Design Phase<br>
@@ -123,8 +139,8 @@
 
     <div class="w3-container w3-padding-32 w3-theme-l1 w3-center">
     <div class="fotorama" data-nav="thumbs" data-width="100%" data-height="100%">
-      <img src="images/service3-1.jpeg" data-caption="One example of Construction Drawing">
-      <img src="https://s.fotorama.io/2.jpg">
+      <img src="images/contract1.png" data-caption="Design-Bid-Build Diagram">
+      <img src="images/contract2.png" data-caption="Design-Bid-Build diagram for Small Projects">
     </div>
     </div>
 
