--- a/yourSite/service3.html
+++ b/yourSite/service3.html
@@ -14,7 +14,6 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/additional-methods.min.js"></script> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
     <script src="script.js"></script>
@@ -124,7 +123,7 @@
     <div class="w3-container w3-padding-32 w3-theme-l1 w3-center">
     <div class="fotorama" data-nav="thumbs" data-width="100%" data-height="100%">
       <img src="images/construction1.jpeg" data-caption="One example of Construction Drawing">
-      <img src="https://s.fotorama.io/2.jpg">
+      <img src="images/construction2.jpeg" data-caption="Another example of Construction Drawing">
     </div>
     </div>
 
