--- a/yourSite/index.html
+++ b/yourSite/index.html
@@ -34,7 +34,7 @@
   <a href="service5.html" class="w3-bar-item w3-button">Contract Administration</a>
 </nav>
 
-<!-- Navbar -->
+<!-- Header -->
 <div class="w3-top">
  <div class="w3-bar w3-theme-d2 w3-left-align">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
@@ -78,7 +78,7 @@
   </div>
 </div>
 
-<!-- Image Header -->
+<!-- Hero Section -->
 <div class="hero w3-display-container">
   <div class="hero-content w3-display-bottomleft">  
     <h1>CLIMATE ACTION THROUGH DESIGN</h1>
@@ -117,7 +117,7 @@
     <p>Michelangler is committed to driving change across the design industry, our client relationships, and the cities where we live, work, and play. We are dedicated to leading this change by starting from within. Two years since we launched our Strategies to Fight Racism, we continue to evolve our diversity, equity, and inclusion efforts, taking on an ever more localized approach in each of our communities. From partnering with our clients in designing equitable spaces, to creating opportunities in our industry for diverse talent, we have made measurable progress on all fronts and continue to take action to create purposeful, inclusive, and resilient spaces for everyone.</p>
   </div>
 
-  <!-- Project Section -->
+  <!-- Gallery Section -->
   <div class="w3-container w3-padding-32" id="project">
     <h2 class="w3-center">FEATURED PROJECTS</h2>
   </div>
@@ -279,7 +279,7 @@
     </div>
   </div>
 
-<!-- Work Row -->
+<!-- Custom Section -->
 <div class="service w3-row-padding w3-padding-64 w3-theme-l1" id="service">
 
   <div class="w3-quarter">
@@ -364,6 +364,7 @@
 </div>
 </div>
 
+<!-- Faq Section -->
 <div class="faq w3-row-padding w3-padding-64 w3-theme-l1" id="faq">
   <h2 class="w3-center">FAQ</h2>
   <div id="tabs">
@@ -414,7 +415,7 @@
   </div>
   </div>
 
-<!-- Contact Container -->
+<!-- Contact Section -->
 <div class="w3-container w3-padding-64 w3-theme-l5 contact" id="contact">
   <div class="w3-row">
     <div class="w3-col m5">
